# AgentOS

./: .gitignore  MessageParam内容块回传指南.md  README.md  alembic.ini  compact.py  demo_sse.html  demo_sse.py  demo_streamable_http.html  demo_streamable_http.py  llm_client.py  main.py  main_sse.html  main_sse.py  main_streamable.html  main_streamable.py  model.py  paths.py  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/: health.py  router.py  sessions.py  tasks.py  teams.py  tools.py
app/core/: config.py  errors.py  event_bus.py  events.py  logging.py  prompts.py  responses.py  team_task_isolation.py
app/db/: session.py
app/llm/: __init__.py  client.py  types.py
app/models/: __init__.py  session.py  task.py  team.py  tool.py
app/repositories/: session_repo.py  subagent_run_repo.py  task_repo.py  team_repo.py  tool_repo.py
app/schemas/: common.py  session.py  task.py  team.py
app/services/: agent_runtime.py  compact_service.py  session_service.py  subagent_runner.py  task_service.py  team_service.py  tool_service.py
app/tools/: __init__.py  base.py  registry.py
docs/: streaming-protocol.md
skills/test/: SKILL.md
tools/: __init__.py  base.py  registry.py  skill.py  skill_registry.py  todo.py  tool_registry.py
tools/agent_tools/: agent_tool.py  definition.py  general_purpose_agent.py
tools/builtin/: bash.py  compact.py  skill.py  task.py  todo.py  weather.py
tools/subagents/: agent_tool.py  definition.py  general_purpose_agent.py
tools/team/: agent_teams.py  team_message_bus.py  team_types.py
(+15 files in other folders)
