[project]
name = "agentos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.49.0",
    "redis>=5.2.0",
    "greenlet>=3.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py314"
